# mktshare_agricola

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
input/: Tabela 3.9 - Goias 2021.xlsx  Tabela 3.9 - Goias 2022.xlsx  Tabela 3.9 - Goias 2023.xlsx
output/: consolidado_soja.xlsx  consolidado_soja_transformado.xlsx  ~$consolidado_soja_transformado.xlsx
scripts/: __init__.py  dashboard.py  extract.py  transform.py
