[tool.poetry]
name = "mktshare-agricola"
version = "0.1.0"
description = ""
authors = ["matheuzdsilva@icloud.com"]
license = "MIT"
readme = "README.md"
packages = [{include = "mktshare_agricola"}]  # Certifique-se de que essa pasta existe

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
streamlit = "^1.43.2"
plotly = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"